# vulkan-game-engine

./: .gitignore  CMakeLists.txt  ClassDiagram.cd  README.md  THIRDPARTY.md  add.cpp  biosim.sln  biosim.vcxproj  biosim.vcxproj.filters  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  first_app.cpp  first_app.hpp  frame.hpp  game_object.cpp  game_object.hpp  imgui.ini  main.cpp  movement.cpp  movement.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  rendering.cpp  rendering.hpp  simple_render_system.cpp  simple_render_system.hpp  size.cpp  size.h  swap_chain.cpp  swap_chain.hpp  tasks.py  utils.hpp  (+8 more)
shaders/: aabb.frag  aabb.frag.spv  aabb.vert  aabb.vert.spv  line.frag  line.frag.spv  line.vert  line.vert.spv  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/: aabb.cpp  aabb.hpp  aabb_render_system.cpp  aabb_render_system.hpp  assets.cpp  assets.hpp  buffer.cpp  buffer.hpp  buffered_vector.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  entity_manager.cpp  entity_manager.hpp  entity_types.hpp  first_app.cpp  first_app.hpp  frame.hpp  game_object.cpp  game_object.hpp  gui_render_system.cpp  gui_render_system.hpp  line_render_system.cpp  line_render_system.hpp  main.cpp  main_render_system.cpp  main_render_system.hpp  movement.cpp  movement.hpp  pipeline.cpp  pipeline.hpp  pointlight_render_system.cpp  pointlight_render_system.hpp  renderer.cpp  renderer.hpp  settings.hpp  simple_render_system.cpp  (+12 more)
task/: compile_shaders.bat  unix_build.sh  windows_build.bat
